--- a/package.json
+++ b/package.json
@@ -12,13 +12,25 @@
   },
   "author": "Maksym",
   "license": "ISC",
+  "browserslist": [
+    "> 1%"
+  ],
   "bugs": {
     "url": "https://github.com/boomer77777/Food/issues"
   },
   "homepage": "https://github.com/boomer77777/Food#readme",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.29.0",
     "json-server": "^0.17.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
